# industry-benchmarking

./: .gitignore  .gitmodules  README.md
benchmarking-docs/: README.md  algorithms.md  input.md
benchmarking-docs/workflow/: README.md  abc.yaml  atomic_abc.yaml
benchmarking-docs/workflow/input/: company0.yaml
evaluation/BASIC/: fhe.csv
evaluation/IM/: fhe.csv  result.csv  statistics.txt  tee_plain.csv
evaluation/PN/: fhe.csv  result.csv  statistics.txt  tee_plain.csv
evaluation/STARTTIME/: start_times.csv  statistics.txt
formula-parsing/data/: algo_atomic.yaml  intermediary.yaml
formula-parsing/formula-parsing-impl/: Cargo.toml  README.md
formula-parsing/formula-parsing-impl/src/: main.rs  parser.rs
hw-pib/: .dockerignore  Dockerfile  README.md  docker-compose.yml  run-scone-container-wo-las-sim.sh  run-scone-container-wo-las.sh
hw-pib/certificate-generation/: generate_certs.sh
hw-pib/container-scripts/: execute.sh
hw-pib/impl/: Cargo.toml
hw-pib/impl/benchmark/: Cargo.toml
hw-pib/impl/benchmark/src/: atomic.rs  error.rs  lib.rs  operation.rs  resolved.rs  variable.rs
hw-pib/impl/client/: Cargo.toml
hw-pib/impl/client/src/: api.rs  client.rs  config.rs  error.rs  lib.rs
hw-pib/impl/client/src/connection/: analyst.rs  company.rs  mod.rs  spectator.rs  state.rs
hw-pib/impl/data/evaluation/: test_orchestra.csv
hw-pib/impl/orchestra/: Cargo.toml  README.md  run-all.sh
hw-pib/impl/orchestra/src/: main.rs
hw-pib/impl/server/: Cargo.toml  README.md  run-inf.sh
hw-pib/impl/server-util/: Cargo.toml
hw-pib/impl/server-util/src/: broadcast_event.rs  client_cert_extractor.rs  crypto_decode.rs  error.rs  files.rs  lib.rs  state.rs
hw-pib/impl/server/src/: app.rs  benchmark.rs  config.rs  crypto.rs  lib.rs  routes.rs  server.rs
hw-pib/impl/server/src/api/: analyst.rs  benchmark_admin.rs  company.rs  index.rs  mod.rs  server_admin.rs
hw-pib/impl/server/src/middleware/: mod.rs  request_logger.rs  request_verifier.rs  response_logger.rs
hw-pib/impl/templates/crypto/: .gitignore  README.md  generate.md
hw-pib/impl/templates/crypto/enclave/: enclave.key  enclave.pem
hw-pib/impl/templates/crypto/server/: server.key  server.pem
hw-pib/impl/templates/yaml/: atomics.yaml  benchmark_config.yaml  inputs.yaml  server_config.yaml
hw-pib/impl/types/: Cargo.toml
hw-pib/impl/types/src/: consts.rs  entity.rs  input.rs  lib.rs  output.rs
hw-pib/impl/types/src/message/: io.rs  mod.rs  request.rs  response.rs
hw-pib/scone/: .gitignore  README.md  build_env_vars  create-scone-container.sh  run-scone-container.sh  teebench-session.yml  teebench-template.yml  verify-scone-container.sh
sw-pib/: README.md  setup_seal.sh
sw-pib/data/Results/: results.csv
sw-pib/data/Results/BASIC/: 00add.csv  01sub.csv  02div.csv  03mul.csv  04sqrt.csv  05poc.csv  06dic.csv
sw-pib/data/Results/IM/: IKV.csv
sw-pib/data/Results/PN/: WZL.csv
sw-pib/data/Test/Algorithms/: atomics.yaml
sw-pib/data/Test/Inputs/: inputs.yaml
sw-pib/data/Test/evaluation/00add/analyst/: algorithms.yaml
sw-pib/data/Test/evaluation/00add/inputs/: comp0.yaml
sw-pib/data/Test/evaluation/01sub/analyst/: algorithms.yaml
sw-pib/data/Test/evaluation/02div/analyst/: algorithms.yaml
sw-pib/data/Test/evaluation/03mul/analyst/: algorithms.yaml  benchmarking_config.yaml
sw-pib/data/Test/evaluation/04sqrt/: orchestra.yaml
sw-pib/data/Test/evaluation/04sqrt/analyst/: algorithms.yaml
sw-pib/data/Test/evaluation/05poc/analyst/: algorithms.yaml
sw-pib/data/Test/evaluation/06dic/analyst/: algorithms.yaml
sw-pib/src/: main.py
sw-pib/src/entities/: analyst.py  client.py  proxy.py  server.py
sw-pib/src/settings/: PIB_SEAL.yaml
sw-pib/src/util/: algorithms.py  atomic.py  configurations.py  constants.py  encrypted_variable.py  evaluation.py  fileoperations.py  representation.py  resolved_values.py  seal_util.py  variable.py
