[package]
name = "orchestra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
zip = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

server = { path="../server" }
client = { path="../client" }
types = { path="../types" }