[package]
name = "server-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-multipart = "0.4.0"
rustls = {version = "0.20.5", features = ["logging"] }
rustls-pemfile = "1.0.0"
actix-tls = "3.0.3"
x509-certificate = "0.13.0"
stringreader = "0.1.1"
uuid = { version = "0.8", features = ["v4"] }

parking_lot = "0.12"
futures = "0.3.21"
futures-util = "0.3"
tokio = { version = "1.16", features = ["sync"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
derive_more = "0.99.17"

log = "0.4.16"
validator = { version = "0.14", features = ["derive"] }
types = { path="../types" }
benchmark = { path="../benchmark" }


[features]
evaluation = []