[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# HTTP server
actix = "0.13.0"
actix-web = { version = "4", features = ["rustls"] }
actix-multipart = "0.4.0"
actix-http = "3.0.4"
actix-files = "0.6"
uuid = { version = "0.8", features = ["v4"] }

# Server sent events
parking_lot = "0.12"
tokio = { version = "1.16", features = ["sync"] }

# TLS encryption
rustls = {version = "0.20.5" }
rustls-pemfile = "1.0.0"
x509-certificate = "0.13.0"

# Signatures
ring = "0.16.20"
base64 = "0.13.0"

# Concurrency
rayon = "1.5.3"
async-lock = "2.5.0"

# futures
futures = "0.3.21"
futures-util = "0.3"

# Logging
env_logger = "0.9.0"
log = { version="0.4.17" }
time = "=0.3.13"
chrono = "0.4"

# Serialization and deserialization (JSON/YAML)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
derive_more = "0.99.17"
stringreader = "0.1.1"
strum = { version = "0.24.0", features = ["derive"] }

# Field validation
validator = { version = "0.14", features = ["derive"] }

# Local crates
types = { path = "../types" }
server-util = { path = "../server-util" }
benchmark = { path = "../benchmark" }


pin-project = "1"

[features]
default = []
evaluation = ["types/evaluation", "server-util/evaluation", "benchmark/evaluation", "log/release_max_level_off"] 
# pin-project = "1" → Only on missing eval